@@ -14,7 +14,7 @@ AC_DIVERT_PUSH(AC_DIVERSION_NOTICE)dnl
 #
 RNUMBER_MAJOR_VERSION=1
 RNUMBER_MINOR_VERSION=11
-RNUMBER_MICRO_VERSION=2
+RNUMBER_MICRO_VERSION=3
 RNUMBER_INTERFACE_AGE=0
 RNUMBER_BINARY_AGE=0
 RNUMBER_VERSION=$RNUMBER_MAJOR_VERSION.$RNUMBER_MINOR_VERSION.$RNUMBER_MICRO_VERSION
